# leetcode

./: .clang-format  CMakeLists.txt  README.md  dp_10_isMatch.h  dp_264_nthUglyNumber.h  leetcode.code-workspace
c_algorithm/: CMakeLists.txt  learnalgorithm.c
c_algorithm/include/binarytree/: algorithm_binarytree.h
c_algorithm/include/dfs/: algorithm_dfs.h
c_algorithm/include/dp/: algorithm_dp.h
c_algorithm/include/stack/: algorithm_stack.h
c_algorithm/include/string/: algorithm_string.h
c_algorithm/include/uthash/: algorithm_testuthash.h
c_algorithm/src/binaryTree/: algorithm_binarytree.c
c_algorithm/src/dfs/: algorithm_dfs.c
c_algorithm/src/list/: algorithm_list.c
c_algorithm/src/segmenttree/: algorithm_segmenttree.c
c_algorithm/src/utils/: algorithm_utils.c
include/: god.h  test_cpp_cmath.h  test_cpp_maths_bit.h  test_cpp_string.h  test_disjoint_set_union_demo.h  test_stl_array.h  test_stl_deque.h  test_stl_map.h  test_stl_multimap.h  test_stl_multiset.h  test_stl_priority_queue.h  test_stl_queue.h  test_stl_set.h
include/Krahets_88_numbers/: backtracking_104_maxDepth.h  backtracking_113_pathSum.h  backtracking_79_exist.h  bit_136_singleNumber.h  bit_191_hammingWeight.h  bit_231_isPowerOfTwo.h  divide_conquer_105_buildTree.h  divide_conquer_226_invertTree.h  divide_conquer_297_serialize.h  dp_10_isMatch.h  dp_121_maxProfit.h  dp_1480_runningSum.h  dp_213_rob_ii.h  dp_300_lengthOfLIS.h  dp_64_minPathSum.h  dp_70_climbStairs.h  dual_pointers_142_detectCycle.h  dual_pointers_15_threeSum.h  dual_pointers_167_twoSum.h  dual_pointers_392_isSubsequence.h  dual_pointers_3_lengthOfLongestSubstring.h  dual_pointers_876_middleNode.h  find_153_findMin.h  find_287_findDuplicate.h  greedy_11_maxArea.h  greedy_122_maxProfit.h  greedy_135_candy.h  greedy_240_searchMatrix.h  greedy_768_maxChunksToSorted.h  list_138_copyRandomList.h  list_206_reverseList.h  list_21_mergeTwoLists.h  list_237_deleteNode.h  list_86_partition.h  maths_1823_findTheWinner.h  maths_343_integerBreak.h  maths_400_findNthDigit.h  maths_65_isNumber.h  maths_89_grayCode.h  queue_stack_107_levelOrderBottom.h  (+10 more)
include/leetcode/: leetcode_binary_tree.h  leetcode_list.h
include/leetcode_data_structure/: leetcode_binary_tree.h  leetcode_list.h
include/luogu/: 0P1028.md  0P1036.md  0P1080.md  disjoint_set_union_P1551.h  dp_P1028_calculate_number.h  greedy_P1080_king_game.h  slide_window_P1036_choose_prime.h
include/old_algorithm/: testdata.h
include/old_algorithm/array/: algorithm_array.h
include/old_algorithm/greedy/: algorithm_greedy.h
include/old_algorithm/hashtable/: algorithm_hashtable.h
include/old_algorithm/heap/: algorithm_heap.h
include/old_algorithm/list/: algorithm_list.h
include/old_algorithm/segmenttree/: algorithm_segmenttree.h
include/old_algorithm/utils/: algorithm_utils.h
include/test_cpp_algorithm/: test_algorithm_find.h  test_algorithm_merge.h  test_algorithm_sort.h
include/test_sort/: test_bubble_sort.h  test_bucket_sort.h  test_counting_sort.h  test_insertion_sort.h  test_merge_sort.h  test_quick_sort.h  test_radix_sort.h  test_selection_sort.h  test_shell_sort.h
include/test_stl/: test_stl_array.h  test_stl_deque.h  test_stl_map.h  test_stl_multimap.h  test_stl_multiset.h  test_stl_pair.h  test_stl_priority_queue.h  test_stl_queue.h  test_stl_set.h  test_stl_vector.h
src/: 232_MyQueue.h  295_MedianFinder.h  394_decodeString.h  CMakeLists.txt  backtracking_104_maxDepth.h  backtracking_113_pathSum.h  backtracking_39_combinationSum.h  backtracking_40_combinationSum2.h  backtracking_46_permute.h  backtracking_47_permuteUnique.h  backtracking_79_exist.h  binary_tree_144_preorderTraversal.h  binary_tree_145_postorderTraversal.h  binary_tree_94_inorderTraversal.h  bit_137_singleNumber_II.h  bit_231_isPowerOfTwo.h  bit_371_getSum.h  disjoint_set_union_lc128_longestConsecutive.h  disjoint_set_union_lc130_solve.h  disjoint_set_union_lc1971_validPath.h  disjoint_set_union_lc200_numIslands.h  disjoint_set_union_lc924_minMalwareSpread.h  divide_conquer_101_isSymmetric.h  divide_conquer_105_buildTree.h  divide_conquer_110_isBalanced.h  divide_conquer_297_serialize.h  divide_conquer_50_myPow.h  dp_198_rob.h  dp_264_nthUglyNumber.h  dp_509_fib.h  dp_53_maxSubArray.h  dual_pointers_142_detectCycle.h  dual_pointers_151_reverseWords.h  dual_pointers_15_threeSum.h  dual_pointers_160_getIntersectionNode.h  dual_pointers_167_twoSum.h  dual_pointers_239_maxSlidingWindow.h  dual_pointers_392_isSubsequence.h  dual_pointers_3_lengthOfLongestSubstring.h  dual_pointers_876_middleNode.h  (+46 more)
src/old_algorithm/array/: algorithm_array.c
src/old_algorithm/dp/: algorithm_dp.c  getSubset.py
src/old_algorithm/greedy/: algorithm_greedy.c
src/old_algorithm/hashtable/: algorithm_hashtable.c
src/old_algorithm/heap/: algorithm_heap.c
src/old_algorithm/stack/: algorithm_stack.c
src/old_algorithm/string/: algorithm_string.c
test/: CMakeLists.txt  test_learnalgorithm.cpp
